--- a/src/Components/Heading/Heading.css
+++ b/src/Components/Heading/Heading.css
@@ -2,7 +2,7 @@
 
 
 .heading{
-    width: 80vw;
+    width: 70vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,11 +11,12 @@
     cursor: pointer;
     padding: 20px;
     margin-bottom: 10px;
+    gap: 0.3rem;
 }
 
 .heading>span{
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +39,7 @@
 }
 .heading>div{
     width: 65vw;
-    height: 100px;
+    height: 120px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     display: flex;
@@ -46,8 +47,8 @@
     align-items: center;
     border-radius: 20px;
     box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-
 }
+
 .heading>div>b{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
