--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+
 .blog{
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .blog-head{
@@ -20,5 +24,50 @@
     font-size: 35px;
     color: black;
     width: 350px;
-    margin-top: 0px;
+    margin-top: 10px;
+}
+
+.blog-page{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+
+
+
+.blog-page>.blog-sec{
+    height: 20rem;
+    width: 18vw;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+    cursor: pointer;
+    overflow: hidden;
+}
+.blog-page>.blog-sec>img{
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    z-index: 1;
+    height: 150px;
+    width: 100%;
+    transition: transform 0.2s ease-in-out;
+    margin-top: -18px;
+}
+.blog-page > .blog-sec > img:hover {
+    transform: scale(1.04);
+  }
+.blog-page>.blog-sec>b{
+    margin-top: 15px;
+    margin-left: 10px;
+    color: #ff451b;
+    font-family: 'Poppins', sans-serif;
+    font-size: 17px;
+}
+.blog-page>.blog-sec>h3{
+    margin-top:10px;
+    margin-left: 10px;
+    font-family: 'Poppins', sans-serif;
 }
