--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -13,6 +13,7 @@
     border-radius: 10px;
     gap: 2rem;
     padding-top: 60px;
+    transition: 1s;
 }
 
 .about-img{
@@ -87,4 +88,59 @@
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
 
+}
+
+
+
+@media screen and (max-width:1100px) {
+    .about-me{
+        height: 55rem;
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+    }
+    .about-text{
+        width: 80vw;
+        margin-left: 50px;
+        /* margin-left: -100px; */
+        margin-top: -130px;
+    }
+    .about-img>img{
+        height: 350px;
+        width: 85vw;
+        margin-left: 10px;    
+    }
+    .about-img>div{
+        display: none;
+    }
+    /* .about-img>div>.context{
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0 0 10px;
+    } */
+}
+
+@media screen and (max-width:510px) {
+    .about-img>img{
+        height: 350px;
+        width: 80vw;
+        margin-left: 10px;    
+    }
+    .about-text{
+        margin-top: -60px;
+        margin-left: 10px;
+    }
+    .about-text>h2{
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width:390px) {
+    .about-text>p:nth-of-type(1){
+        margin-top: -13px;
+    }
+    .about-img>img{
+        height: 250px;  
+    }
 }
