--- a/src/Components/Heading/Heading.css
+++ b/src/Components/Heading/Heading.css
@@ -53,3 +53,26 @@
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
 }
+
+@media screen and (max-width:1100px) {
+    .heading{
+        width: 90vw;
+        margin-top: -10px;
+    }
+    .heading>span:nth-of-type(2){
+        display: none;
+    }
+    .heading>span{
+        height: 60px;
+        width: 60px;
+    }
+    .heading>span>*{
+        color: white;
+        height: 20px;
+        width: 20px;
+    }
+    .heading>div{
+        height: 60px;
+        width: 80vw;
+    }
+}
