--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -266,3 +266,14 @@
     position: relative;
     right: 50px;
   }
+
+
+  @media screen and (max-width:1100px) {
+    .Main-page{
+      height: 50rem;
+    }
+    .Main{
+      display: flex;
+      flex-direction: column;
+    }
+  }
