--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-
+.about-service{
+    height: 58rem;
+}
 .services{
     display: flex;
     flex-direction: column;
@@ -75,4 +77,44 @@
     color: black;
     opacity: 0.8;
     margin-top: -10px;
+}
+
+
+@media screen and (max-width:1100px) {
+    .about-service{
+        height: 80rem;
+    }
+    .serv-head{
+        margin-left: 20px;
+
+    }
+    .serv-head>h2{
+        width: 100%;
+    }
+    .serv-content{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        margin-left: 30px;
+    }
+    .serviceData{
+        width: 40vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width:550px) {
+    .about-service{
+        height: 160rem;
+    }
+    .serv-content{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1rem;
+    }
+    .serviceData{
+        width: 80vw;
+    }
 }
