--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -21,3 +21,16 @@
     align-items: center;
     gap: 1rem;
 }
+
+
+@media screen and (max-width:480px) {
+
+    .footer{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer>div:nth-of-type(1){
+        display: flex;
+        flex-direction: column;
+    }
+}
