--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-
+.about-resume{
+    height: 90rem;
+}
 .resume{
     display: flex;
     flex-direction: column;
@@ -61,6 +63,8 @@
 
 .prof-experience{
     font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 .prof-experience>h2{
     display: flex;
@@ -181,3 +185,62 @@
     border-radius: 100%;
 }
 
+
+@media screen and (max-width:1100px) {
+    .about-resume{
+        height: 119rem;
+    }
+    /* .resume{
+        margin-top: 450px;
+    } */
+    .resume-main{
+        margin-left: 30px;
+        gap: 6rem;
+        display: flex;
+        flex-direction: column;
+    }
+    .resume-left{
+        width: 80vw;
+    }
+    .resume-right{
+        margin-top: -70px;
+        width: 80vw;
+    }
+    .skills>.add{
+        width: 75vw;
+    }
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+        margin-left: 30vw;
+    }
+}
+
+
+@media screen and (max-width:600px) {
+    .about-resume{
+        height: 125rem;
+    }
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+        margin-left: 10vw;
+    }
+}
+@media screen and (max-width:480px) {
+    .resume-head>h3{
+        width: 35vw;
+    }
+    .about-resume{
+        height: 160rem;
+    }
+    .soft-skills>.office{
+        height: 140px;
+        width: 140px;
+
+    }
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+        margin-left: -1rem;
+    }
+}
+@media screen and (max-width:415px){
+    .about-resume{
+        height: 180rem;
+    }
+}
