--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -97,20 +97,43 @@ textarea{
 
 
 @media screen and (max-width:1100px) {
-    .contact>h2{
-        width: 100%;
+    .about-contact{
+        height: 65rem;
+        margin-bottom: 20px;
     }
     .contact-me{
         display: flex;
         flex-direction: column;
     }
     .form{
-        margin-top: 30px;
-        margin-left: 70px;
-        width: 700px;
+        margin-top: 0px;
+        margin-left: 120px;
+    }
+    form{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1rem;
     }
     form>input{
-        width: 18rem;
-        gap: 5rem;
+        width: 70vw;
+    }
+    textarea{
+        margin-top: 120px;
+        width: 70vw;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .form{
+        margin-left: 50px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .contact{
+        margin-left: -140px;
+    }
+    .contact>h2{
+        width: 300px;
     }
 }
