--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -23,7 +23,7 @@
 }
 
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:768px) {
 
     .footer{
         display: flex;
@@ -32,5 +32,8 @@
     .footer>div:nth-of-type(1){
         display: flex;
         flex-direction: column;
+    }
+    .footer>div:nth-of-type(2){
+        margin-top: 10px;
     }
 }
