--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -37,3 +37,11 @@
         margin-top: 10px;
     }
 }
+
+@media screen and (max-width:400px) {
+    .footer>div:nth-of-type(2){
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
