--- a/src/Components/Testimonial/Testimonial.css
+++ b/src/Components/Testimonial/Testimonial.css
@@ -82,14 +82,14 @@
     border-radius: 50px;
 }
 .testimonial .swiper-pagination-bullet-active{
-    background: yellow;
+    background: #ff451b;
     margin-top: 20px !important;
 }
 
 
 @media screen and (max-width:1100px) {
     .about-test{
-        height: 50rem;
+        height: 40rem;
     }
     .testimonial{
         display: flex;
@@ -106,16 +106,62 @@
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:766px) {
     .test-head{
         margin-left: 40px;
     }
     .testimonial .swiper{
-        margin-left: 20px;
-        /* background-color: #d6d6d6; */
+        margin-left: 0px;
         width: 40rem;
     }
     .testo{
-        width: 40vw;
+        width: 60vw;
+    }
+}
+
+
+@media screen and (max-width:580px) {
+    .testimonial{
+        margin-left: -40px;
+    }
+    .testimonial .swiper{
+        margin-left: -40px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .testimonial .swiper{
+        margin-left: -80px;
+    }
+    .testo{
+        width: 75vw;
+    }
+}
+
+@media screen and (max-width:390px) {
+    .testimonial .swiper{
+        margin-left: -110px;
+    }
+    .testo{
+        width: 80vw;
+    }
+}
+
+@media screen and (max-width:346px) {
+    .test-head>h2{
+        width: 300px;
+    }
+    .testimonial .swiper{
+        margin-left: -130px;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .test-head{
+        margin-left: -10px;
+    }
+    .swiper-slide>.testo>.image>img{
+        height: 50px;
+        width: 50px;
     }
 }
