--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,47 +1,17 @@
 .footer{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
 
 .footer>div:nth-of-type(1){
     font-family: 'Poppins', sans-serif;
-    color: rgb(160, 158, 158);
+    color: rgb(0, 0, 0);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.footer>div:nth-of-type(2){
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
 
-
-@media screen and (max-width:768px) {
-
-    .footer{
-        display: flex;
-        flex-direction: column;
-    }
-    .footer>div:nth-of-type(1){
-        display: flex;
-        flex-direction: column;
-    }
-    .footer>div:nth-of-type(2){
-        margin-top: 10px;
-    }
-}
-
-@media screen and (max-width:400px) {
-    .footer>div:nth-of-type(2){
-        display: flex;
-        flex-direction: column;
-    }
-    
-}
