--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -279,6 +279,11 @@
   }
 
   @media screen and (max-width:480px) {
+    .main-btn{
+      position: absolute;
+      top: 20px;
+      right: 4vw;
+    }
     .Main-left{
       margin-left: 40px;
     }
