--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -46,6 +46,7 @@
 .con-icons>.first>div>p{
     color: #1b1a1a;
     opacity: 0.7;
+    width: 100%;
 }
 
 .contact>b{
@@ -138,7 +139,7 @@ textarea{
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:340px) {
     .form{
         margin-left: 20px;
     }
