--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -116,6 +116,7 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 1rem;
+        margin-left: 18px;
     }
     .serviceData{
         width: 80vw;
