--- a/src/Components/Testimonial/Testimonial.css
+++ b/src/Components/Testimonial/Testimonial.css
@@ -148,6 +148,9 @@
 }
 
 @media screen and (max-width:346px) {
+    .about-test{
+        height: 44rem;
+    }
     .test-head>h2{
         width: 300px;
     }
