--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -113,6 +113,9 @@ textarea::placeholder {
     background-color: #FFA500;
     transition: 0.3s;
   }
+  .done{
+    margin-top: 10px;
+  }
 
 @media screen and (max-width:1100px) {
     .about-contact{
@@ -163,9 +166,8 @@ textarea::placeholder {
         right: 270px;
       }
       .done{
-        margin-bottom: -50px;
+        margin-bottom: 50px;
       }
-
 }
 
 @media screen and (max-width:370px) {
