--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -166,8 +166,8 @@ textarea::placeholder {
         right: 270px;
       }
       .done{
-        margin-bottom: 50px;
-      }
+        margin-top: 50px;
+        }
 }
 
 @media screen and (max-width:370px) {
