--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -166,7 +166,8 @@ textarea::placeholder {
         right: 270px;
       }
       .done{
-        margin-top: 50px;
+        position: relative;
+        top: 50px;
         }
 }
 
