--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -209,21 +209,21 @@
     color: white;
   }
   .Main-icons>span:nth-of-type(1){
-    background-color: blueviolet;
+    background-color: #3b5998;
     border-radius: 100%;
   }
   .Main-icons>span:nth-of-type(2){
-    background-color: rgb(152, 139, 224);
+    background-color: #00acee;
     border-radius: 100%;
 
   }
   .Main-icons>span:nth-of-type(3){
-    background-color: blueviolet;
+    background-color: #feda75;
     border-radius: 100%;
 
   }
   .Main-icons>span:nth-of-type(4){
-    background-color: rgb(152, 139, 224);
+    background-color: #0072b1;
     border-radius: 100%;
 
   }
@@ -232,7 +232,7 @@
     border-radius: 100%;
   }
   .Main-icons>span:nth-of-type(6){
-    background-color: rgb(152, 139, 224);
+    background-color: #99ffff;
     border-radius: 100%;
 
   }
