--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -218,7 +218,7 @@
 
   }
   .Main-icons>span:nth-of-type(3){
-    background-color: #feda75;
+    background-image: linear-gradient(to right, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
     border-radius: 100%;
 
   }
