--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -208,7 +208,11 @@
   .Main-icons>span>a>*{
     color: white;
   }
-  .Main-icons>span:nth-of-type(1){
+.Main-icons>span>a:nth-of-type(6)
+{
+    color:red;
+}
+    .Main-icons>span:nth-of-type(1){
     background-color: #3b5998;
     border-radius: 100%;
   }
