--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -188,7 +188,7 @@
 
 @media screen and (max-width:1100px) {
     .about-resume{
-        height: 129rem;
+        height: 145rem;
     }
     /* .resume{
         margin-top: 450px;
@@ -209,22 +209,22 @@
     .skills>.add{
         width: 75vw;
     }
-    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4), .office:nth-of-type(6){
         margin-left: 30vw;
     }
 }
 
 @media screen and (max-width:768px) {
     .about-resume{
-        height: 135rem;
+        height: 160rem;
     }
 }
 
 @media screen and (max-width:600px) {
     .about-resume{
-        height: 150rem;
+        height: 175rem;
     }
-    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4), .office:nth-of-type(6){
         margin-left: 10vw;
     }
 }
@@ -239,13 +239,13 @@
         height: 140px;
         width: 140px;
     }
-    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4), .office:nth-of-type(6){
         margin-left: -1rem;
     }
 }
 @media screen and (max-width:435px){
     .about-resume{
-        height: 180rem;
+        height: 220rem;
     }
 }
 
@@ -256,12 +256,12 @@
 }
 @media screen and (max-width:356px) {
     .about-resume{
-        height: 190rem;
+        height: 230rem;
     }
     .soft-skills{
         margin-left: -20px;
     }
-    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4){
+    .soft-skills>.office:nth-of-type(2), .office:nth-of-type(4), .office:nth-of-type(6){
         margin-left: 0.3rem;
     }
     .soft-skills>.office{
