--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -67,10 +67,12 @@
 .Main-page>span>.small{
     height: 30px;
     width: 30px;
+    z-index: -10;
 }
 .Main-page>span>.large{
     height: 70px;
     width: 70px;
+    z-index: -10;
 }
 .Main-page>span>*{
     height: 40px;
