--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -261,7 +261,7 @@
     border-radius: 100%;
   }
   .Main-icons>span:nth-of-type(6){
-    background-color: #99ffff;
+    background-color: #FAF9F6;
     border-radius: 100%;
 
   }
