--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -233,10 +233,7 @@
   .Main-icons>span>a>*{
     color: white;
   }
-.Main-icons>span>a:nth-of-type(6)
-{
-    color:red;
-}
+
     .Main-icons>span:nth-of-type(1){
     background-color: #3b5998;
     border-radius: 100%;
@@ -261,7 +258,7 @@
     border-radius: 100%;
   }
   .Main-icons>span:nth-of-type(6){
-    background-color: white;
+    background-color: red;
     border-radius: 100%;
 
   }
