--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -84,7 +84,6 @@ form>input{
     border: 1px solid aqua;
     display: flex;
     gap: 3rem;
-    padding: 0.8rem;
 }
 textarea{
     height: 100px;
@@ -93,9 +92,9 @@ textarea{
     border-radius: 7px;
     /* margin-top: -60px; */
 }
-/* textarea::placeholder {
+textarea::placeholder {
     padding-top: 10px;
-  } */
+  }
   input::placeholder,
   textarea::placeholder {
     /* Your desired font styles */
