--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -6,7 +6,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
-    height: 37rem;
+    height: auto;
+    padding: 20px;
     width: 70vw;
     background-color: white;
     box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
@@ -97,11 +98,12 @@
 
 @media screen and (max-width:1100px) {
     .about-me{
-        height: 23rem;
+        /* height: 23rem; */
         width: 90vw;
         display: flex;
         flex-direction: column;
-        padding-top: 0px;
+        /* padding-top: 0px; */
+        padding: 30px;
     }
     .about-text{
         width: 80vw;
@@ -114,18 +116,15 @@
     }
 }
 
-@media screen and (max-width:790px) {
+/* @media screen and (max-width:790px) {
     .about-me{
         height: 29rem;
     }
-}
+} */
 
 @media screen and (max-width:510px) {
-    .about-me{
-        height: 37rem;
-    }
     .about-text{
-        margin-top: -60px;
+        /* margin-top: -60px; */
         margin-left: 10px;
     }
     .about-text>h2{
@@ -140,9 +139,7 @@
 }
 
 @media screen and (max-width:360px) {
-    .about-me{
-        height: 41rem;
-    }
+
     .about-text{
         margin-top: 0px;
     }
