--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-.about-service{
-    height: 58rem;
-}
 .services{
     display: flex;
     flex-direction: column;
@@ -81,9 +78,6 @@
 
 
 @media screen and (max-width:1100px) {
-    .about-service{
-        height: 80rem;
-    }
     .serv-head{
         margin-left: 20px;
 
@@ -106,11 +100,14 @@
 }
 
 @media screen and (max-width:550px) {
+    .about-service{
+        height: 130rem;
+    }
+    .serv-head>h2{
+        width: 80vw;
+    }
     .Services{
         margin-top: -40px;
-    }
-    .about-service{
-        height: 153rem;
     }
     .serv-content{
         display: grid;
@@ -120,5 +117,6 @@
     }
     .serviceData{
         width: 80vw;
+        height: 300px;
     }
 }
