--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -25,7 +25,7 @@
 
 .about-img>div{
     height: 410px;
-    width: 330px;
+    width: 20vw;
     background-color: #ff451b;
     font-family: 'Poppins', sans-serif;
     border-radius: 10px;
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px 0 0 10px;
+    width: 80%;
 }
 .about-img>div>.context>.grey{
     color: #FFFFFF;
@@ -96,19 +97,15 @@
 
 
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1300px) {
     .about-me{
-        /* height: 23rem; */
-        width: 90vw;
         display: flex;
         flex-direction: column;
-        /* padding-top: 0px; */
         padding: 30px;
     }
     .about-text{
-        width: 80vw;
+        width: 66vw;
         margin-left: 50px;
-        /* margin-left: -100px; */
         margin-top: -10px;
     }
     .about-img{
