--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -97,15 +97,19 @@
 
 
 
-@media screen and (max-width:1300px) {
+@media screen and (max-width:1100px) {
     .about-me{
+        /* height: 23rem; */
+        width: 90vw;
         display: flex;
         flex-direction: column;
+        /* padding-top: 0px; */
         padding: 30px;
     }
     .about-text{
-        width: 66vw;
+        width: 80vw;
         margin-left: 50px;
+        /* margin-left: -100px; */
         margin-top: -10px;
     }
     .about-img{
